updating dataService 	- added modile-info.java 	- java upgrade to version 11 	- pom update